# auto_bing_rewards

./: .env.example  .gitignore  README.md  SCHEDULER_USAGE.md  accounts.example.json  gitcommit.md  llm_result.md  logging_config.yaml  main.py  pyproject.toml  requirements.txt  rewards.html  run_scheduler.py  xx
app/: bot.py  database.py  main.py  progress.py
app/api/: task.py
app/core/: bot.py  config.py  logger.py  scheduler.py  searchterm.py  task.py
app/demo/: bot_demo.py
app/models/: account.py  progress.py
app/static/: index.html
user_script/: auto_bing.js
